[package]
name = "robusta-example"
version = "0.2.0"
authors = ["Giovanni Berti <dev.giovanniberti@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
dashmap = "5.4.0"
once_cell = "1.17.1"
rdkafka = { version = "0.29.0", features = ["cmake-build"] }
robusta_jni = { path = "../" }
